--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Gaegu:wght@300;400;700&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="styles.css" rel="stylesheet">
+    <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
+    <!-- 이 줄을 삭제해주세요 -->
+    <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
+    <meta http-equiv="Cross-Origin-Opener-Policy" content="same-origin">
+    <meta http-equiv="Cross-Origin-Embedder-Policy" content="require-corp">
 </head>
 <body>
     <div class="leaves-overlay"></div>
@@ -39,17 +44,25 @@
             </div>
         </div>
 
-        <div id="result" class="test-section d-none">
-            <div class="paper-background">
-                <h2 class="text-center mb-4">결과</h2>
-                <div id="result-content"></div>
-                <div class="character-image mt-4 mb-4"></div>
-                <button class="btn custom-btn-primary mt-4" onclick="restartTest()">
-                    <span class="btn-text">다시 시작하기</span>
-                </button>
-            </div>
+<div id="result" class="test-section d-none">
+    <div class="paper-background">
+        <h2 class="text-center mb-4">결과</h2>
+        <div id="result-content"></div>
+        <div class="character-image mt-4 mb-4"></div>
+        <!-- 공유 버튼 추가 -->
+        <div class="share-buttons mt-4">
+            <button class="btn custom-btn-kakao" onclick="shareToKakao()">
+                카카오톡으로 공유하기
+            </button>
+            <button class="btn custom-btn-save" onclick="saveAsImage()">
+                이미지로 저장하기
+            </button>
         </div>
+        <button class="btn custom-btn-primary mt-4" onclick="restartTest()">
+            <span class="btn-text">다시 시작하기</span>
+        </button>
     </div>
+</div>
 
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
